//==========================================================================
//
// History file for EvtGen
//
//===========================================================================

12th December 2017 John Back
    Changed Pythia validation example decay files to use Pythia8 codes.

6th December 2017 John Back
    Modified the examples to use DECAY.DEC (see 25th April 2016) instead of
    DECAY_2010.DEC. Changed EvtExternalGenList to assume Pythia8 codes are
    used in decay files by default, which is the case for DECAY.DEC. Also
    updated the setupEvtGen.sh script to work with Pythia 8.2x versions.

29th November 2017 John Back
    Modified EvtSVP, EvtVVP and EvtTVP models to handle both radiative and
    two-lepton decays, courtesy of Aleksei Luchinskii (LHCb).

14th July 2017 John Back
    Only create external generator objects if they don't already exist in
    EvtExternalGenFactory. Modified configure script to work with Pythia 8.2x

5th July 2017 Michal Kreps
    Register the VTOSLL model.

14th June 2017 John Back
    Add isNeutralKaon() boolean function and corrected comments in EvtDDalitz.

8th May 2017 Michal Kreps
    Fix bug in EvtbTosllVectorAmp to recognise Bs --> K*bar mu mu decay as
    b --> d ll transition. 

8th May 2017 Michal Kreps
    Significantly simplify way how we decide on decay mode and daughters
    ordering in DDalitz model. With new code by definition all orderings of
    daughters in the decay file will yield same output.

4th May 2017 John Back
    Further fixes to DDalitz particle ordering (including charge-conjugates):
    Mode 5:  D0 -> K- K0bar K+ and K+ K- K0bar
    Mode 12: D0 -> pi0 pi- pi+ and pi+ pi0 pi-
    Removed unneeded index ordering checks for mode 10 (D+ -> pi- pi+ pi+)
    and mode 11 (Ds+ -> pi- pi+ pi+)

27th April 2017 John Back
    Fixed DDalitz particle ordering for mode 7: D+ -> pi+ K- K+ and K+ pi+ K-
    and their charge-conjugates

7th April 2017 John Back