@@ -1,0 +1,1 @@
+Directory which is used by the compareRootFiles.cc program to store validation plots as gif files.
