@@ -4,6 +4,12 @@
 //
 //===========================================================================
 
+R01-07-00-------------------------------------------------------------------
+13th December 2016 John Back
+    New tag incorporating all changes below. Recommended external packages
+    are HepMC 2.06.09, pythia 8.230, Photos++ 3.61 and Tauola++ 1.1.6c,
+    as used in the setupEvtGen.sh script.
+
 12th December 2017 John Back
     Changed Pythia validation example decay files to use Pythia8 codes.
 
